--- a/tribute.html
+++ b/tribute.html
@@ -4,36 +4,42 @@
 <head>
   <!--  Meta  -->
   <meta charset="UTF-8" />
-  <!-- Menu -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Joshua's Page</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="tribute.html">Tribute Page<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="survey.html">Survey Page</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="product.html">Product Page</a>
-        </li>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="documentations.html">Documentation Page</a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-
+    <!-- Menu -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
+      <a class="navbar-brand" id="header" href="index.html"><img src="https://dcassetcdn.com/design_img/2090667/79989/79989_11117506_2090667_48818131_image.png" width="150px"  height="100px" id="header-img" alt="no_image"> Joshua's Page</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="tribute.html">Tribute Page<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="survey.html">Survey Page</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="product.html">Product Page</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="documentations.html">Documentation Page</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="quotemachine.html">Quote Machine</a>
+          </li>
+        </ul>
+  
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    <!-- End of Menu-->
+    
   <title>My Tribute Page</title>
   <!--  Styles  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
