--- a/product.html
+++ b/product.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+
   <!-- Menu -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
     <a class="navbar-brand" id="header" href="index.html"><img src="https://dcassetcdn.com/design_img/2090667/79989/79989_11117506_2090667_48818131_image.png" width="150px"  height="100px" id="header-img" alt="no_image"> Joshua's Page</a>
@@ -11,6 +12,7 @@
   </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="tribute.html">Tribute Page<span class="sr-only">(current)</span></a>
@@ -25,13 +27,19 @@
         <li class="nav-item">
           <a class="nav-link" href="documentations.html">Documentation Page</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="quotemachine.html">Quote Machine</a>
+        </li>
       </ul>
+
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </nav>
+  <!-- End of Menu-->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Product Page</title>
