--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   <title>My Portpolio Page</title>
   <!--  Styles  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/index.processed.css">
+  <link rel="stylesheet" href="styles/quotemachine.css">
 </head>
 
 <body>
   <h1>Welcome to My page</h1>
-  profile under FreeCodeCamp: <a href="https://www.freecodecamp.org/fcc7360b33e-80ff-4b8f-998c-4874c953f851">Free code camp</a>
-  LinkedIn Profile:   <a href="https://www.linkedin.com/in/joshua-james-dela-cruz-35465891/">Linkedin</a>
+  profile under FreeCodeCamp: <a href="#">Free code camp</a>
+  LinkedIn Profile:   <a href="#">Linkedin</a>
 
 </body>
  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
