--- a/quotemachine.html
+++ b/quotemachine.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
   <meta content="Joshua James Dela Cruz" name="author">
   <link href="reset.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="styles/quotemachine.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
