--- a/quotemachine.html
+++ b/quotemachine.html
@@ -33,7 +33,7 @@
 
     </main>
     <footer class="transparent">
-      <p>Coded by Joshua James Dela Cruz - see source on <a href="https://github.com/sebam2k4/Random-Quote-Generator-JS">GitHub</a></p>
+      <p>Coded by Joshua James Dela Cruz - see source on <a href="#">GitHub</a></p>
     </footer>
   </div>
 </body>
