update to check the navigations
update to check the navigations

--- a/quotemachine.html
+++ b/quotemachine.html
@@ -9,6 +9,7 @@
   <meta content="Joshua James Dela Cruz" name="author">
   <link href="reset.css" rel="stylesheet">
   <link href="styles/quotemachine.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/documentation.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!--  Meta  -->
   <meta charset="UTF-8" />
@@ -47,7 +48,7 @@
     </div>
   </nav>
   <!-- End of Menu-->
-  
+
 
 </head>
 <body>
