--- a/quotemachine.html
+++ b/quotemachine.html
@@ -54,8 +54,8 @@
 
 <body>
   <div class="container">
-    <header class="transparent">
-      <h1>Random Architecture Quote Generator</h1>
+    <header>
+      <h1>Random Quote Generator</h1>
     </header>
     <main class="quote-box border">
 
