--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
    <!-- Menu -->
    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-    <a class="navbar-brand" id="header" href="index.html"><img src="https://dcassetcdn.com/design_img/2090667/79989/79989_11117506_2090667_48818131_image.png" width="150px"  height="100px" id="header-img" alt="no_image"> Joshua's Page</a>
+    <a class="navbar-brand" id="header" href="index.html">Joshua's Page</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
