--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <!-- Menu -->
    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav-bar">
     
-    <a class="navbar-brand" id="header" href="index.html">Joshua's Page</a>
+    <a class="navbar-brand" id="header" href="index.html">< Dev Josh ></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
 
@@ -180,7 +180,7 @@
             </a>
         </li>
         <li class="social-list__item">
-            <a class="social-list__link" href="https://github.com" target="_blank">
+            <a class="social-list__link" href="https://github.com/jjddelacruz/Myportfolio" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
         </li>
