--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <div class="col-md">
                 <p class="portfolio__item">
                     <a href="documentations.html"  target="_blank">
-                        <img src="img/documentationJS.png" alt="documentation" class="portfolio__img"> 
+                        <img src="img/testing.jpg" alt="documentation" class="portfolio__img" height="255px"> 
                     </a>
                     <a href="#" class="btn" id="button1">code</i></a>
                     <a href="#" class="btn" id="button1">site</a>
