--- a/quotemachine.html
+++ b/quotemachine.html
@@ -32,7 +32,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Random Quote Generator</h1>
+      <h1>Random Anime Quote</h1>
     </header>
     <main class="quote-box border">
 
