--- a/quotemachine.html
+++ b/quotemachine.html
@@ -40,6 +40,10 @@
         <q id="quote">Random Quote</q>
       </div>
 
+      <div class="image-area float-right">
+        <p><img src="" alt="anime-image" id="image" style="width: 10rem; height: 10rem;"></p>
+      </div>
+
       <div class="author-area">
         <p id="author">Author</p>
       </div>
