--- a/quotemachine.html
+++ b/quotemachine.html
@@ -55,7 +55,11 @@
 
     </main>
     <footer class="transparent">
-      <p>Coded by Joshua James Dela Cruz - see source on <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/quotemachine.html">GitHub</a></p>
+      <p>Coded by Joshua James Dela Cruz - see source on 
+        <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/quotemachine.html">GitHub</a>
+        <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/styles/quotemachine.css">CSS</a>
+        <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/scripts/quotemachine.js">JavaScript</a>
+      </p>
     </footer>
   </div>
 </body>
