--- a/markdownpreviewer.html
+++ b/markdownpreviewer.html
@@ -20,7 +20,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="root"></div>
-        <script src="" async defer></script>
+        <script type="type/babel" src="scripts/markdown.js" ></script>
 
     </body>
 </html>
