--- a/markdownpreviewer.html
+++ b/markdownpreviewer.html
@@ -12,14 +12,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.0.0-beta.3/babel.min.jss"></script>
+        <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="root"></div>
+       
         <script type="type/babel" src="scripts/markdown.js"></script>
-
+        <div id="root"></div>
     </body>
 </html>
