updated the pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="services">
                 <div class="service">
                     <h3>Design + Development</h3>
-                    <p>most of my code here i learned from freecodecamp.org this is to build confidence in coding</p>
+                    <p>most of my code here i learned from freecodecamp.org this is to build confidence in coding my front-end projects</p>
                 </div> <!-- / service -->
 
                 <div class="service">
@@ -112,11 +112,15 @@
               <div class="col-md">
                 <p class="portfolio__item">
                     <a href="documentations.html"  target="_blank">
-                        <img src="img/testing.jpg" alt="documentation" class="portfolio__img" height="255px"> 
+                        <img src="img/documentationJS.jpg" alt="documentation" class="portfolio__img" height="255px"> 
                     </a>
                     <a href="#" class="btn" id="button1">code</i></a>
-                    <a href="#" class="btn" id="button1">site</a>
+                    <a href="documentations.html" class="btn" id="button1">site</a>
                     <span>
+                        <ul>
+                            <li>Project:</li>
+                            <li>JavaScript Documentation</li>
+                        </ul>
                         <ul>
                             <li>Languages:</li>
                             <li>HTML</li>
@@ -130,10 +134,20 @@
               <div class="col-md">
                 <p class="portfolio__item">
                     <a href="documentations.html"  target="_blank">
-                        <img src="img/documentationJS.png" alt="documentation" class="portfolio__img"> 
+                        <img src="img/alpacino.jpg" alt="documentation" class="portfolio__img" height="255px">  
                     </a>
                      <a href="#" class="btn" id="button1">code</i></a>
-                     <a href="#" class="btn" id="button1">site</a>
+                     <a href="tribute.html" class="btn" id="button1">site</a>
+                     <span>
+                        <ul>
+                            <li>Project:</li>
+                            <li>Al Pacino Tribute Page</li>
+                        </ul>
+                        <ul>
+                            <li>Languages:</li>
+                            <li>HTML</li>
+                        </ul>
+                    </span>
                     </p>
               </div>
 
@@ -141,16 +155,28 @@
               <div class="col-md">
                 <p class="portfolio__item">
                     <a href="documentations.html"  target="_blank">
-                        <img src="img/documentationJS.png" alt="documentation" class="portfolio__img"> 
+                        <img src="img/random_quote.jpg" alt="documentation" class="portfolio__img" height="255px"> 
                     </a>
                      <a href="#" class="btn" id="button1">code</i></a>
-                     <a href="#" class="btn" id="button1">site</a>
+                     <a href="quotemachine.html" class="btn" id="button1">site</a>
+                     <span>
+                        <ul>
+                            <li>Project:</li>
+                            <li>Random Quote generator</li>
+                        </ul>
+                        <ul>                         
+                            <li>Languages:</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </span>
                     </p>
               </div>
+              
             </div>
+
           </div>
-
-
     </div>
 </section>
 
