--- a/quotemachine.html
+++ b/quotemachine.html
@@ -4,7 +4,7 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta charset="UTF-8">
-  <title>Random Architecture Quote Generator</title>
+  <title>Random Anime Quote Generator</title>
   <meta content="" name="description">
   <meta content="Joshua James Dela Cruz" name="author">
   <link href="styles/quotemachine.css" rel="stylesheet">
