--- a/survey.html
+++ b/survey.html
@@ -6,42 +6,21 @@
   <meta charset="UTF-8" />
 
     <!-- Menu -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav-bar">
-      <a class="navbar-brand" id="header" href="index.html">Joshua's Page</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <header>
+      <!-- Menu -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav-bar">
+     
+     <a class="navbar-brand" id="header" href="index.html">< Dev Josh ></a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
   
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="tribute.html">Tribute Page<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="survey.html">Survey Page</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="product.html">Product Page</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="documentations.html">Documentation Page</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="quotemachine.html">Quote Machine</a>
-          </li>
-        </ul>
-  
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
+   </button>
+   </nav>
+   <!-- End of Menu-->
+   </header>
     <!-- End of Menu-->
 
-  <title>Survey Page</title>
+  <title>Freecodecamp Survey Page Project</title>
   <!--  Styles  -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/index.processed.css">
