--- a/quotemachine.html
+++ b/quotemachine.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -9,22 +10,27 @@
   <meta content="Joshua James Dela Cruz" name="author">
   <link href="styles/quotemachine.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/documentation.css">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!--  Meta  -->
-  
+
   <header>
     <!-- Menu -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav-bar">
-   
-   <a class="navbar-brand" id="header" href="index.html">< Dev Josh ></a>
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="navbar-toggler-icon"></span>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav-bar">
 
- </button>
- </nav>
- <!-- End of Menu-->
- </header>
+      <a class="navbar-brand" id="header" href="index.html">
+        < Dev Josh>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+
+      </button>
+    </nav>
+    <!-- End of Menu-->
+  </header>
 </head>
 
 
@@ -50,12 +56,13 @@
 
       <div class="buttons-area">
         <a class="btn border-smaller" id="random-quote" href="#" title="Next Quote">Random Quote</a>
-        <a class="btn border-smaller" id="tweet-quote" href="https://twitter.com/intent/tweet?" target="_blank" title="Tweet this quote"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a class="btn border-smaller" id="tweet-quote" href="https://twitter.com/intent/tweet?" target="_blank"
+          title="Tweet this quote"><i class="fa fa-twitter" aria-hidden="true"></i></a>
       </div>
 
     </main>
     <footer class="transparent">
-      <p>Coded by Joshua James Dela Cruz - see source on 
+      <p>Coded by Joshua James Dela Cruz - see source on
         <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/quotemachine.html">GitHub</a>
         <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/styles/quotemachine.css">CSS</a>
         <a href="https://github.com/jjddelacruz/Myportfolio/blob/main/scripts/quotemachine.js">JavaScript</a>
@@ -65,7 +72,11 @@
 </body>
 
 <script src="scripts/quotemachine.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </html>
