--- a/survey.html
+++ b/survey.html
@@ -1,96 +1,153 @@
 <!DOCTYPE html5>
 <html lang="en">
-
-<head>
-  <!--  Meta  -->
-  <meta charset="UTF-8" />
+  <head>
+    <!--  Meta  -->
+    <meta charset="UTF-8" />
 
     <!-- Menu -->
     <header>
       <!-- Menu -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav-bar">
-     
-     <a class="navbar-brand" id="header" href="index.html">< Dev Josh ></a>
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
-  
-   </button>
-   </nav>
-   <!-- End of Menu-->
-   </header>
+      <nav
+        class="navbar fixed-top navbar-expand-lg navbar-light bg-light"
+        id="nav-bar"
+      >
+        <a class="navbar-brand" id="header" href="index.html">< Dev Josh ></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
+      <!-- End of Menu-->
+    </header>
     <!-- End of Menu-->
 
-  <title>Freecodecamp Survey Page Project</title>
-  <!--  Styles  -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/index.processed.css">
-</head>
+    <title>Freecodecamp Survey Page Project</title>
+    <!--  Styles  -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/index.processed.css" />
+  </head>
 
-<body>
-  <form id="survey-form" method="POST">
-    <div class="container">
-      <h1 id="title">Survey</h1>
-      <div class="col">
-        <p id="descriptions"> this is a test page for survey</p>
+  <body>
+    <form id="survey-form" method="POST">
+      <div class="container">
+        <h1 id="title">Survey</h1>
+        <div class="col">
+          <p id="descriptions">this is a test page for survey</p>
+        </div>
+
+        <div class="col-md-5">
+          <label for="name-label">Name:</label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class="form-control"
+            placeholder="Enter Fullname here"
+            required
+          />
+        </div>
+
+        <div class="col-md-5">
+          <label for="email-label"> Email:</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form-control"
+            placeholder="Enter Email here"
+            required
+          />
+        </div>
+
+        <div class="col-md-5">
+          <label for="number-label">Number:</label>
+          <input
+            type="number"
+            min="100"
+            max="9000"
+            name="number"
+            id="email"
+            class="form-control"
+            placeholder="using this number"
+            required
+          />
+        </div>
+
+        <div class="col-md-5">
+          <label for="number-label">Dropdown:</label>
+          <select id="dropdown" name="dropdown" class="form-control">
+            <option></option>
+            <option value="test">test</option>
+            <option value="test">test</option>
+            <option value="test">test</option>
+          </select>
+        </div>
+
+        <div class="col-md-5">
+          <label for="gender">Gender:</label>
+          <input type="radio" name="gender" value="male" /><label for="gender"
+            >Male</label
+          >
+          <input type="radio" name="gender" value="female" /><label for="gender"
+            >Female</label
+          >
+        </div>
+
+        <div class="col-md-5">
+          <label for="device">Device:</label>
+          <input type="checkbox" name="device" value="PC" /><label for="device"
+            >PC</label
+          >
+          <input type="checkbox" name="device" value="Phone" /><label
+            for="device"
+            >Phone</label
+          >
+          <input type="checkbox" name="device" value="Others" /><label
+            for="device"
+            >Others</label
+          >
+        </div>
+
+        <div class="col-md-5">
+          <label for="comments">Additional Comments or suggestions:</label>
+          <textarea name="comments" id="" cols="60" rows="5"></textarea>
+        </div>
+
+        <br />
+        <div class="col-md-5">
+          <input type="submit" id="submit" class="form-control btn-success" />
+          <input type="button" class="form-control btn-danger" value="Cancel" />
+        </div>
       </div>
+    </form>
 
-      <div class="col-md-5">
-        <label for="name-label">Name:</label>
-        <input type="text" name="name" id="name" class="form-control" placeholder="Enter Fullname here" required>
-      </div>
-
-      <div class="col-md-5">
-        <label for="email-label"> Email:</label>
-        <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email here" required>
-      </div>
-
-      <div class="col-md-5">
-        <label for="number-label">Number:</label>
-        <input type="number" min="100" max="9000" name="number" id="email" class="form-control" placeholder="using this number" required>
-      </div>
-
-      <div class="col-md-5">
-        <label for="number-label">Dropdown:</label>
-        <select id="dropdown" name="dropdown" class="form-control">
-        <option></option>
-        <option value="test">test</option>
-        <option value="test">test</option>
-        <option value="test">test</option>
-      </select>
-      </div>
-
-      <div class="col-md-5">
-        <label for="gender">Gender:</label>
-        <input type="radio" name="gender" value="male"><label for="gender">Male</label>
-        <input type="radio" name="gender" value="female"><label for="gender">Female</label>
-      </div>
-
-      <div class="col-md-5">
-        <label for="device">Device:</label>
-        <input type="checkbox" name="device" value="PC"><label for="device">PC</label>
-        <input type="checkbox" name="device" value="Phone"><label for="device">Phone</label>
-        <input type="checkbox" name="device" value="Others"><label for="device">Others</label>
-      </div>
-
-      <div class="col-md-5">
-        <label for="comments">Additional Comments or suggestions:</label>
-        <textarea name="comments" id="" cols="60" rows="5"></textarea>
-      </div>
-
-      <br>
-      <div class="col-md-5">
-        <input type="submit" id="submit" class="form-control btn-success">
-        <input type="button" class="form-control btn-danger" value="Cancel">
-      </div>
-
-    </div>
-  </form>
-
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
-
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
