--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
                             <span class="float-left position-relative">
                                 <p class="text-md-left">Project: JavaScript Documentation</p>
                                 <p class="text-md-left">Languages: HTML CSS</p>
-                                <p class="text-md-left">Summary: Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Praesentium!</p>
+                                <p class="text-md-left">Summary: This is to create a documentation page for the JavaScript</p>
                             </span>
                         </div>
                         </p>
@@ -158,8 +157,7 @@
                         <span class="float-left position-relative">
                             <p class="text-md-left">Project: Al Pacino Tribute</p>
                             <p class="text-md-left">Languages: HTML CSS</p>
-                            <p class="text-md-left">Summary: Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Praesentium!</p>
+                            <p class="text-md-left">Summary: </p>
                         </span>
                     </div>
                 </div>
@@ -179,13 +177,53 @@
                     <div class="col-5">
                         <p class="text-md-left">Project: Random Quote Generator</p>
                         <p class="text-md-left">Languages: HTML CSS JavaScript</p>
-                        <p class="text-md-left">Summary: Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Praesentium!</p>
+                        <p class="text-md-left">Summary: </p>
                         </p>
                     </div>
                 </div>
             </div>
 
+            <!-- Portfolio item 04 -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-5">
+                        <p class="rounded">
+                            <a href="survey.html" target="_blank">
+                                <img src="img/inprogress.jpg" alt="" class="img-fluid img-thumbnail">
+                            </a>
+                            <a href="#" class="btn" id="button1">code</i></a>
+                            <a href="tribute.html" class="btn" id="button1">site</a>
+                        <p class="rounded">
+                    </div>
+                    <div class="col-5">
+                        <span class="float-left position-relative">
+                            <p class="text-md-left">Project: Survey Form Template</p>
+                            <p class="text-md-left">Languages: HTML CSS</p>
+                            <p class="text-md-left">Summary: </p>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+             <!-- Portfolio item 05 -->
+             <div class="container">
+                <div class="row">
+                    <div class="col-5">
+                        <p class="rounded">
+                            <a href="#" target="_blank">
+                                <img src="img/inprogress.jpg" alt="documentation" class="img-fluid img-thumbnail">
+                            </a>
+                            <a href="#" class="btn" id="button1">code</i></a>
+                            <a href="#" class="btn" id="button1">site</a>
+                    </div>
+                    <div class="col-5">
+                        <p class="text-md-left">Project: In Progress</p>
+                        <p class="text-md-left">Languages: In Progress</p>
+                        <p class="text-md-left">Summary: In Progress</p>
+                        </p>
+                    </div>
+                </div>
+            </div>
 
 
 
