--- a/survey.html
+++ b/survey.html
@@ -44,7 +44,7 @@
       <div class="container">
         <h1 id="title">Survey</h1>
         <div class="col">
-          <p id="descriptions">this is a test page for survey</p>
+          <p id="descriptions"><h2>Survey template:</h2></p>
         </div>
 
         <div class="col-md-5">
