--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Joshua James Dela Cruz</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">freecode Camper</p>
+            <p class="section__subtitle section__subtitle--intro">Full-Stack Developer</p>
             <img src="img/pp.jpg" alt="a picture of Joshua smiling" class="intro__img">
         </section>
 
@@ -71,22 +71,20 @@
         <section class="my-services" id="services">
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
-                <div class="service">
+                <div class="service text-left">
                     <h3>Design + Development</h3>
-                    <p>most of my code here i learned from freecodecamp.org this is to build confidence in coding my
-                        front-end projects</p>
+                    <p>Building state-of-the-art, easy to use, user-friendly websites and applications is truly a passion of mine</p>
                 </div> <!-- / service -->
 
-                <div class="service">
+                <div class="service text-left">
                     <h3>E-Commerce</h3>
-                    <p>I have been using magento and shopify as an e-commerce platform to learn thier basic
+                    <p>I have been using magento, shopify and woocommerce as an e-commerce platform with basic to intermediate skills in thier
                         functionalities</p>
                 </div> <!-- / service -->
 
-                <div class="service">
+                <div class="service text-left">
                     <h3>WordPress</h3>
-                    <p>I mostly used WordPress for a faster deploying the site immediately where the client can easily
-                        update the site</p>
+                    <p>This gave me experience building and maintaining a wide variety of websites, ranging from personal blogs to online stores to large corporate sites.</p>
                 </div> <!-- / service -->
             </div> <!-- / services -->
             <a href="#work" class="btn" id="button1">My Work</a>
@@ -96,12 +94,10 @@
         <!-- About me -->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Designer & developer based in Manila</p>
-            <p>I am a freecodecamper that wanted to learn more about coding and improving my front-end development skill
-                and I am focused on changing
-                my career from techinical support staff. that is why I am willing to go the distance on learning new
-                things as I venture on to the wolrd
-                of a Full Stack Developer. I also really love to travel and experience things first hand.
+            <p class="section__subtitle section__subtitle--about">Developer based in Manila</p>
+            <p>
+                I am a Developer that is eager to improve my front-end development skill to meet the industry standards.
+                That is why I am willing to go the distance on learning new things such as machine learning and Cloud based development.
             </p>
             <div class="about-me__body">
                 <p></p>
@@ -130,9 +126,9 @@
                         </div>
                         <div class="col-5">
                             <span class="float-left position-relative">
-                                <p class="text-md-left">Project: JavaScript Documentation</p>
-                                <p class="text-md-left">Languages: HTML CSS</p>
-                                <p class="text-md-left">Summary: This is to create a documentation page for the JavaScript</p>
+                                <p class="text-left">Project: JavaScript Documentation</p>
+                                <p class="text-left">Languages: HTML CSS</p>
+                                <p class="text-left">Summary: This is to create a documentation page for the JavaScript</p>
                             </span>
                         </div>
                         </p>
@@ -155,9 +151,9 @@
                     </div>
                     <div class="col-5">
                         <span class="float-left position-relative">
-                            <p class="text-md-left">Project: Al Pacino Tribute</p>
-                            <p class="text-md-left">Languages: HTML CSS</p>
-                            <p class="text-md-left">Summary: </p>
+                            <p class="text-left">Project: Al Pacino Tribute</p>
+                            <p class="text-left">Languages: HTML CSS</p>
+                            <p class="text-left">Summary: </p>
                         </span>
                     </div>
                 </div>
@@ -175,37 +171,15 @@
                             <a href="quotemachine.html" class="btn" id="button1">site</a>
                     </div>
                     <div class="col-5">
-                        <p class="text-md-left">Project: Random Quote Generator</p>
-                        <p class="text-md-left">Languages: HTML CSS JavaScript</p>
-                        <p class="text-md-left">Summary: </p>
+                        <p class="text-left">Project: Random Quote Generator</p>
+                        <p class="text-left">Languages: HTML CSS JavaScript</p>
+                        <p class="text-left">Summary: </p>
                         </p>
                     </div>
                 </div>
             </div>
 
-            <!-- Portfolio item 04 -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-5">
-                        <p class="rounded">
-                            <a href="survey.html" target="_blank">
-                                <img src="img/inprogress.jpg" alt="" class="img-fluid img-thumbnail">
-                            </a>
-                            <a href="#" class="btn" id="button1">code</i></a>
-                            <a href="tribute.html" class="btn" id="button1">site</a>
-                        <p class="rounded">
-                    </div>
-                    <div class="col-5">
-                        <span class="float-left position-relative">
-                            <p class="text-md-left">Project: Survey Form Template</p>
-                            <p class="text-md-left">Languages: HTML CSS</p>
-                            <p class="text-md-left">Summary: </p>
-                        </span>
-                    </div>
-                </div>
-            </div>
-
-             <!-- Portfolio item 05 -->
+             <!-- Portfolio item Inprogress -->
              <div class="container">
                 <div class="row">
                     <div class="col-5">
