--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <!-- Portfolio item 01 -->
                 <div class="container">
                     <div class="row">
-                        <div class="col-5">
+                        <div class="col-md-6">
                             <p class="rounded">
                                 <a href="documentations.html" target="_blank">
                                     <img src="img/documentationJS.jpg" alt="documentation"
@@ -124,7 +124,7 @@
                                 <a href="#" class="btn" id="button1">code</i></a>
                                 <a href="documentations.html" class="btn" id="button1">site</a>
                         </div>
-                        <div class="col-5">
+                        <div class="col-md-6">
                             <span class="float-left position-relative">
                                 <p class="text-left">Project: JavaScript Documentation</p>
                                 <p class="text-left">Languages: HTML CSS</p>
@@ -140,7 +140,7 @@
             <!-- Portfolio item 02 -->
             <div class="container">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-md-6">
                         <p class="rounded">
                             <a href="documentations.html" target="_blank">
                                 <img src="img/alpacino.jpg" alt="documentation" class="img-fluid img-thumbnail">
@@ -149,7 +149,7 @@
                             <a href="tribute.html" class="btn" id="button1">site</a>
                         <p class="rounded">
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-6">
                         <span class="float-left position-relative">
                             <p class="text-left">Project: Al Pacino Tribute</p>
                             <p class="text-left">Languages: HTML CSS</p>
@@ -162,7 +162,7 @@
             <!-- Portfolio item 03 -->
             <div class="container">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-md-6">
                         <p class="rounded">
                             <a href="documentations.html" target="_blank">
                                 <img src="img/random_quote.jpg" alt="documentation" class="img-fluid img-thumbnail">
@@ -170,7 +170,7 @@
                             <a href="#" class="btn" id="button1">code</i></a>
                             <a href="quotemachine.html" class="btn" id="button1">site</a>
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-6">
                         <p class="text-left">Project: Random Quote Generator</p>
                         <p class="text-left">Languages: HTML CSS JavaScript</p>
                         <p class="text-left">Summary: </p>
@@ -182,7 +182,7 @@
              <!-- Portfolio item Inprogress -->
              <div class="container">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-md-6">
                         <p class="rounded">
                             <a href="#" target="_blank">
                                 <img src="img/inprogress.jpg" alt="documentation" class="img-fluid img-thumbnail">
@@ -190,7 +190,7 @@
                             <a href="#" class="btn" id="button1">code</i></a>
                             <a href="#" class="btn" id="button1">site</a>
                     </div>
-                    <div class="col-5">
+                    <div class="col-md-6">
                         <p class="text-md-left">Project: In Progress</p>
                         <p class="text-md-left">Languages: In Progress</p>
                         <p class="text-md-left">Summary: In Progress</p>
