--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
                             <a href="#" class="btn" id="button1">site</a>
                     </div>
                     <div class="col-md-6">
-                        <p class="text-md-left">Project: In Progress</p>
-                        <p class="text-md-left">Languages: In Progress</p>
-                        <p class="text-md-left">Summary: In Progress</p>
+                        <p class="text-md-left">Project: Creating React Site </p>
+                        <p class="text-md-left">Languages: HTML CSS Javascript React</p>
+                        <p class="text-md-left">Summary: </p>
                         </p>
                     </div>
                 </div>
