--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <h2 class="section__title section__title--about">Who I am</h2>
             <p class="section__subtitle section__subtitle--about">Developer based in Manila</p>
             <p>
-                I am a Developer that is eager to improve my front-end development skill to meet the industry standards.
-                That is why I am willing to go the distance on learning new things such as machine learning and Cloud based development.
+                I am a Developer that is eager to improve my development skill to meet the industry standards.
+                That is why I am willing to go the distance on learning new things such as machine learning, Cloud based development and Openai.
             </p>
             <div class="about-me__body">
                 <p></p>
