--- a/markdownpreviewer.html
+++ b/markdownpreviewer.html
@@ -10,10 +10,7 @@
 		<title>Markdown Previewer</title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-			rel="stylesheet"
-			href="styles/markdownpreviewer.css"
-		/>
+		<link rel="stylesheet" href="styles/markdownpreviewer.css" />
 		<!-- stylesheets for bootstraps -->
 		<link
 			rel="stylesheet"
@@ -37,9 +34,9 @@
 			crossorigin
 			src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
 		></script>
-        <!-- script for marked cdn -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.3/marked.min.js"></script>
-		<!-- scripts for babel -->  
+		<!-- script for marked cdn -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/3.0.3/marked.min.js"></script>
+		<!-- scripts for babel -->
 		<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 	</head>
 	<body>
@@ -50,8 +47,8 @@
 			</p>
 		<![endif]-->
 
-		<div id="root"> </div>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+		<div id="root"></div>
+		<!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 		<!-- scripts for babel -->
 		<script type="text/babel" src="scripts/markdown.js"></script>
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
