--- a/index.html
+++ b/index.html
@@ -179,6 +179,49 @@
                 </div>
             </div>
 
+            <!-- Portfolio item Inprogress -->
+             <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="rounded">
+                            <a href="#" target="_blank">
+                                <img src="img/inprogress.jpg" alt="documentation" class="img-fluid img-thumbnail">
+                            </a>
+                            <a href="#" class="btn" id="button1">code</i></a>
+                            <a href="markdownpreviewer.html" class="btn" id="button1">site</a>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="text-md-left">Project: Mark Down Previewer </p>
+                        <p class="text-md-left">Languages: HTML CSS Javascript React</p>
+                        <p class="text-md-left">Summary: </p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
+
+<!-- Portfolio item Inprogress -->
+             <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="rounded">
+                            <a href="#" target="_blank">
+                                <img src="img/inprogress.jpg" alt="documentation" class="img-fluid img-thumbnail">
+                            </a>
+                            <a href="#" class="btn" id="button1">code</i></a>
+                            <a href="#" class="btn" id="button1">site</a>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="text-md-left">Project: Creating React Site </p>
+                        <p class="text-md-left">Languages: HTML CSS Javascript React</p>
+                        <p class="text-md-left">Summary: </p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
              <!-- Portfolio item Inprogress -->
              <div class="container">
                 <div class="row">
