--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="col-md-6">
                         <p class="rounded">
                             <a href="#" target="_blank">
-                                <img src="img/inprogress.jpg" alt="documentation" class="img-fluid img-thumbnail">
+                                <img src="img/" alt="markdownpreviewer" class="img-fluid img-thumbnail">
                             </a>
                             <a href="#" class="btn" id="button1">code</i></a>
                             <a href="markdownpreviewer.html" class="btn" id="button1">site</a>
